--- a/Sohan's Folder/project2/templates/registration.html
+++ b/Sohan's Folder/project2/templates/registration.html
@@ -3,79 +3,91 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registration Form</title>
+  <title>Enhanced Registration Form</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
 <div class="container mt-5">
-  <h2>Registration Form</h2>
-  <form id="registrationForm" action="/registration" method="POST">
-    <div class="row mb-3">
-      <label for="registrationRole" class="col-sm-2 col-form-label">Role</label>
-      <div class="col-sm-10">
-        <select class="form-select" id="registrationRole" name="registrationRole" required>
-          <option value="">Select your role</option>
-          <option value="Professor">Professor</option>
-          <option value="Student">Student</option>
-          <option value="Community">Community</option>
-        </select>
-      </div>
-    </div>
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card shadow">
+        <h4 class="card-header bg-secondary text-white">Registration Form</h4>
+        <div class="card-body">
+          <form id="registrationForm" action="/registration" method="POST">
+            <div class="mb-3 row">
+              <label for="registrationRole" class="col-sm-3 col-form-label">Role</label>
+              <div class="col-sm-9">
+                <select class="form-select" id="registrationRole" name="registrationRole" required>
+                  <option value="">Select your role</option>
+                  <option value="Professor">Professor</option>
+                  <option value="Student">Student</option>
+                  <option value="Community">Community</option>
+                </select>
+              </div>
+            </div>
 
-    <div class="row mb-3">
-      <label for="registrationFirstName" class="col-sm-2 col-form-label">First Name</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="registrationFirstName" name="registrationFirstName" required>
-      </div>
-    </div>
+            <div class="mb-3 row">
+              <label for="registrationFirstName" class="col-sm-3 col-form-label">First Name</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="registrationFirstName" name="registrationFirstName" required>
+              </div>
+            </div>
 
-    <div class="row mb-3">
-      <label for="registrationLastName" class="col-sm-2 col-form-label">Last Name</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="registrationLastName" name="registrationLastName" required>
-      </div>
-    </div>
+            <div class="mb-3 row">
+              <label for="registrationLastName" class="col-sm-3 col-form-label">Last Name</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="registrationLastName" name="registrationLastName" required>
+              </div>
+            </div>
 
-    <div class="row mb-3">
-      <label for="registrationUsername" class="col-sm-2 col-form-label">Username</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="registrationUsername" name="registrationUsername" required>
-      </div>
-    </div>
+            <div class="mb-3 row">
+              <label for="registrationUsername" class="col-sm-3 col-form-label">Username</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="registrationUsername" name="registrationUsername" required>
+              </div>
+            </div>
 
-    <div class="row mb-3">
-      <label for="registrationEmail" class="col-sm-2 col-form-label">Email</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="registrationEmail" name="registrationEmail" required>
-      </div>
-    </div>
+            <div class="mb-3 row">
+              <label for="registrationEmail" class="col-sm-3 col-form-label">Email</label>
+              <div class="col-sm-9">
+                <input type="email" class="form-control" id="registrationEmail" name="registrationEmail" required>
+              </div>
+            </div>
 
-    <div class="row mb-3">
-      <label for="registrationPassword" class="col-sm-2 col-form-label">Password</label>
-      <div class="col-sm-10">
-        <input type="password" class="form-control" id="registrationPassword" name="registrationPassword" required>
-      </div>
-    </div>
+            <div class="mb-3 row">
+              <label for="registrationPassword" class="col-sm-3 col-form-label">Password</label>
+              <div class="col-sm-9">
+                <input type="password" class="form-control" id="registrationPassword" name="registrationPassword" required>
+              </div>
+            </div>
 
-    <div class="row mb-3">
-      <label for="registrationConfirmPassword" class="col-sm-2 col-form-label">Confirm Password</label>
-      <div class="col-sm-10">
-        <input type="password" class="form-control" id="registrationConfirmPassword" name="registrationConfirmPassword" required>
-      </div>
-    </div>
+            <div class="mb-3 row">
+              <label for="registrationConfirmPassword" class="col-sm-3 col-form-label">Confirm Password</label>
+              <div class="col-sm-9">
+                <input type="password" class="form-control" id="registrationConfirmPassword" name="registrationConfirmPassword" required>
+              </div>
+            </div>
 
-    <div class="row mb-3">
-      <div class="col-sm-10 offset-sm-2">
-        <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="termsAndConditions" required>
-          <label class="form-check-label" for="termsAndConditions">I agree to the terms and conditions</label>
+            <div class="mb-3 row">
+              <div class="col-sm-9 offset-sm-3">
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="termsAndConditions" required>
+                  <label class="form-check-label" for="termsAndConditions">I agree to the terms and conditions</label>
+                </div>
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <div class="col-sm-9 offset-sm-3">
+                <button type="submit" class="btn btn-success btn-lg">Register</button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
-
-    <button type="submit" class="btn btn-primary">Register</button>
-  </form>
+  </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
