--- a/Sohan's Folder/project2/templates/professor.html
+++ b/Sohan's Folder/project2/templates/professor.html
@@ -171,7 +171,7 @@
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/script.js"></script>
+    <script src="static/script.js"></script>
     <script>
         document.querySelectorAll('.sidebar-link').forEach(link => {
             link.addEventListener('click', function(e) {
