--- a/Sohan's Folder/project2/templates/home.html
+++ b/Sohan's Folder/project2/templates/home.html
@@ -43,11 +43,12 @@
                            <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item">
-                           <a class="btn btn-primary" href="login.html" id="btnLogin">Login</a>
-                        </li>
-                        <li class="nav-item">
-                           <a class="btn btn-primary" href="registration.html" id="btnRegistration">Register</a>
-                        </li>
+                           <a class="btn btn-primary" href="/login" id="btnLogin">Login</a>
+                       </li>
+                       <li class="nav-item">
+                           <a class="btn btn-primary" href="/registration" id="btnRegistration">Register</a>
+                       </li>
+                       
                      </ul>
                   </div>
                </div>
