--- a/Sohan's Folder/project2/static/css/style.css
+++ b/Sohan's Folder/project2/static/css/style.css
@@ -90,6 +90,15 @@ a.sidebar-link {
     font-size: 0.875rem;
 }
 
+a.button {
+    padding: .625rem 1.625rem;
+    color: #e9ecef;
+    position: relative;
+    display: block;
+    font-size: 0.875rem;
+}
+
+
 .sidebar-link[data-bs-toggle="collapse"]::after {
     border: solid;
     border-width: 0 .075rem .075rem 0;
@@ -103,7 +112,25 @@ a.sidebar-link {
     transition: all .2s ease-out;
 } 
 
+
+.button[data-bs-toggle="collapse"]::after {
+    border: solid;
+    border-width: 0 .075rem .075rem 0;
+    content: "";
+    display: inline-block;
+    padding: 2px;
+    position: absolute;
+    right: 1.5rem;
+    top: 1.4rem;
+    transform: rotate(-135deg);
+    transition: all .2s ease-out;
+} 
+
 .sidebar-link[data-bs-toggle="collapse"].collapsed::after {
+    transform: rotate(45deg);
+    transition: all .2s ease-out;
+}
+.button[data-bs-toggle="collapse"].collapsed::after {
     transform: rotate(45deg);
     transition: all .2s ease-out;
 }
@@ -199,3 +226,13 @@ html[data-bs-theme="dark"] .theme-toggle .fa-moon {
 html[data-bs-theme="light"] .theme-toggle .fa-sun {
     display: none;
 } 
+
+/* ///////////////////////////////////////////////////////// */
+.navbar-text {
+    color: white;
+    margin-right: 15px;
+}
+
+.fa-user {
+    margin-right: 5px;
+}
