--- a/Kushal's Folder/project2/templates/professor.html
+++ b/Kushal's Folder/project2/templates/professor.html
@@ -34,10 +34,11 @@
                         </a> 
                     </li> 
                     
-                
-                        <a href="/logout" class="button" id="logoutLink">
-                            <i class="fa-solid fa-right-from-bracket pe-2"></i> Logout
+                    <li class="sidebar-item">
+                        <a href="#" class="sidebar-link" data-target="logout">
+                            <i class=""></i> Logout
                         </a>
+                    </li> 
 
                     
                 </ul>
@@ -48,11 +49,6 @@
                 <button class="btn" id="sidebar-toggle" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="ms-auto">
-                    <span class="navbar-text">
-                        <i class="fa-solid fa-user"></i> Welcome, <span id="userFirstName">{{ first_name }}</span> <span id="userLastName">{{ last_name }}</span>
-                    </span>
-                </div>
             </nav>
             <main class="content px-3 py-2">
                 <div class="container-fluid">
@@ -175,7 +171,7 @@
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="static/js/script.js"></script>
+    <script src="/static/script.js"></script>
     <script>
         document.querySelectorAll('.sidebar-link').forEach(link => {
             link.addEventListener('click', function(e) {
